deploy/microservices/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pyroscope
  labels:
    app.kubernetes.io/name: pyroscope
